--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mcpp (2.7.1-1) asimov; urgency=low
+
+  * First build for IPlinux.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sun, 15 Mar 2009 16:56:23 +0600
+
 mcpp (2.7.1-0.oi1) asimov; urgency=low
 
   * First build for OpenInkpot.
